--- a/breakout.html
+++ b/breakout.html
@@ -13,7 +13,7 @@
     <h2>How to play:</h2>
     <p>Use right and left arrow keys to move the paddle!  Doing this will bounce the ball and break the blocks! (≧◡≦)</p>
     <p>If you miss the ball, the score and blocks reset... o(〒﹏〒)o</p>
-    <button id="close-btn" class="btn">Close</button>
+    <button id="close-btn" class="btn close-btn">Close</button>
 </div>
 
 <canvas id="canvas"  width="800" height="600"  ></canvas>
