--- a/insect.html
+++ b/insect.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website2!!!</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Welcome!!!</h1>
-    <ol>
-        <li href="breakout.html">Breakout</li>
-    </ol>
+    
 </body>
 </html>
