--- a/insect.html
+++ b/insect.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Catch the Insect</title>
+    <link rel="stylesheet" href="css/insect.css">
 </head>
 <body>
-    
+    <div class="screen">
+        <h1>Catch The Insect</h1>
+        <button class="btn" id="start-btn">Play Game</button>
+    </div>
+
+    <div class="screen">
+        <h1>What is your "favorite" insect?</h1>
+        <ul class="insects-list">
+            <li>
+                <button class="choose-insect-btn">
+                    <p>Fly</p>
+                    <img src="" alt="fly">
+                </button>
+            </li>
+        </ul>
+    </div>
 </body>
+<script src="js/insect.js"></script>
 </html>
