Mon, Apr 8, 2024, 2:39 PM -07:00

--- a/insect.html
+++ b/insect.html
@@ -18,7 +18,7 @@
             <li>
                 <button class="choose-insect-btn">
                     <p>Fly</p>
-                    <img src="" alt="fly">
+                    <img src="css/images/goofycat.png" alt="fly">
                 </button>
             </li>
         </ul>
