Mon, Apr 8, 2024, 2:41 PM -07:00

--- a/insect.html
+++ b/insect.html
@@ -21,6 +21,24 @@
                     <img src="css/images/goofycat.png" alt="fly">
                 </button>
             </li>
+            <li>
+                <button class="choose-insect-btn">
+                    <p>Spider</p>
+                    <img src="css/images/goofycat.png" alt="fly">
+                </button>
+            </li>
+            <li>
+                <button class="choose-insect-btn">
+                    <p>Roach</p>
+                    <img src="css/images/goofycat.png" alt="fly">
+                </button>
+            </li>
+            <li>
+                <button class="choose-insect-btn">
+                    <p>Jack</p>
+                    <img src="css/images/goofycat.png" alt="fly">
+                </button>
+            </li>
         </ul>
     </div>
 </body>
