--- a/insect.html
+++ b/insect.html
@@ -18,25 +18,25 @@
             <li>
                 <button class="choose-insect-btn">
                     <p>Fly</p>
-                    <img src="css/images/goofycat.png" alt="fly">
+                    <img src="images/goofycat.png" alt="fly">
                 </button>
             </li>
             <li>
                 <button class="choose-insect-btn">
                     <p>Spider</p>
-                    <img src="css/images/goofycat.png" alt="fly">
+                    <img src="images/goofycat.png" alt="fly">
                 </button>
             </li>
             <li>
                 <button class="choose-insect-btn">
                     <p>Roach</p>
-                    <img src="css/images/goofycat.png" alt="fly">
+                    <img src="images/goofycat.png" alt="fly">
                 </button>
             </li>
             <li>
                 <button class="choose-insect-btn">
                     <p>Jack</p>
-                    <img src="css/images/goofycat.png" alt="fly">
+                    <img src="images/goofycat.png" alt="fly">
                 </button>
             </li>
         </ul>
