--- a/insect.html
+++ b/insect.html
@@ -49,6 +49,10 @@
         Are you annoyed yet? <br>
         You are playing an impossible game!
     </h5>
+
+    <div class="insect">
+        <img src="images/goofycat.png" alt="kibby">
+    </div>
 </div>
 
 </body>
