Tue, Apr 16, 2024, 2:54 PM -07:00

--- a/hangman.html
+++ b/hangman.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="css/hangman.css">
 </head>
 <body>
+    <h1>Hangman</h1>
+    <p>Find the hidden word - Enter a letter</p>
+    <div class="game-container">
+        <svg height="250" width="200" class="figure-container">
 
+        </svg>
+    </div>
 </body>
-
+<script src="js/hangman.js"></script>
 </html>
