--- a/hangman.html
+++ b/hangman.html
@@ -11,7 +11,7 @@
     <p>Find the hidden word - Enter a letter</p>
     <div class="game-container">
         <svg height="250" width="200" class="figure-container">
-
+            <line x1="60" y1="20" x2="140" y2="20"></line>
         </svg>
     </div>
 </body>
