--- a/hangman.html
+++ b/hangman.html
@@ -15,6 +15,18 @@
             <line x1="140" y1="20" x2="140" y2="50" />
             <line x1="60" y1="20" x2="60" y2="230" />
             <line x1="20" y1="230" x2="100" y2="230" />
+
+            <!-- head-->
+            <circle cx="140" cy="70" r="20" />
+            <!-- body-->
+            <line x1="140" y1="90" x2="140" y2="150" />
+            <!-- arms -->
+            <line x1="140" y1="120" x2="120" y2="100" />
+            <line x1="140" y1="120" x2="160" y2="100" />
+            <!-- legs -->
+            <line x1="140" y1="150" x2="120" y2="180" />
+            <line x1="140" y1="150" x2="160" y2="180" />
+
         </svg>
     </div>
 </body>
