--- a/hangman.html
+++ b/hangman.html
@@ -30,7 +30,18 @@
         </svg>
 
     </div>
-    
+    <!--container for final message-->
+    <div class="popup-container" id="popup-container">
+        <div class="popup">
+            <h2 id="final-message"> You have won!</h2>
+            <button id="play-button">Play again</button>
+        </div>
+    </div>
+    <!-- notification -->
+    <div class="notification-container" id="notification">
+        <p>You have already entered this letter</p>
+    </div>
+
 </body>
 <script src="js/hangman.js"></script>
 </html>
