Thu, Apr 18, 2024, 2:31 PM -07:00

--- a/hangman.html
+++ b/hangman.html
@@ -26,8 +26,9 @@
             <!-- legs -->
             <line x1="140" y1="150" x2="120" y2="180" class="figure-part" />
             <line x1="140" y1="150" x2="160" y2="180" class="figure-part" />
-
         </svg>
+
+        div.wrongLettersContainer
 
     </div>
     <!--container for final message-->
