Thu, Apr 18, 2024, 2:35 PM -07:00

--- a/hangman.html
+++ b/hangman.html
@@ -28,9 +28,22 @@
             <line x1="140" y1="150" x2="160" y2="180" class="figure-part" />
         </svg>
 
-        div.wrongLettersContainer
+        <div class="wrong-letters-container">
+            <div id="wrongLetters">
+                <p>Wrong Letters</p>
+                <span>e, r, t, y</span>
+            </div>
+        </div>
 
+        <div id="word" class="word">
+            <div class="letter">h</div>
+            <div class="letter">e</div>
+            <div class="letter">l</div>
+            <div class="letter">l</div>
+            <div class="letter">o</div>
+        </div>
     </div>
+
     <!--container for final message-->
     <div class="popup-container" id="popup-container">
         <div class="popup">
