Fri, Apr 19, 2024, 2:22 PM -07:00

--- a/insect.html
+++ b/insect.html
@@ -18,25 +18,25 @@
             <li>
                 <button class="choose-insect-btn">
                     <p>Fly</p>
-                    <img src="images/goofycat.png" alt="fly">
+                    <img src="images/four.png" alt="fly">
                 </button>
             </li>
             <li>
                 <button class="choose-insect-btn">
                     <p>Spider</p>
-                    <img src="images/spider.png" alt="fly">
+                    <img src="images/four2.png" alt="fly">
                 </button>
             </li>
             <li>
                 <button class="choose-insect-btn">
                     <p>Roach</p>
-                    <img src="images/roach.png" alt="fly">
+                    <img src="images/four3.png" alt="fly">
                 </button>
             </li>
             <li>
                 <button class="choose-insect-btn">
                     <p>Jack</p>
-                    <img src="images/doodoo.png" alt="fly">
+                    <img src="images/x.png" alt="fly">
                 </button>
             </li>
         </ul>
