--- a/hangman.html
+++ b/hangman.html
@@ -29,25 +29,16 @@
         </svg>
 
         <div class="wrong-letters-container">
-            <div id="wrongLetters">
-                <p>Wrong Letters</p>
-                <span>e, r, t, y</span>
-            </div>
+            <div id="wrongLetters"></div>
         </div>
 
-        <div id="word" class="word">
-            <div class="letter">h</div>
-            <div class="letter">e</div>
-            <div class="letter">l</div>
-            <div class="letter">l</div>
-            <div class="letter">o</div>
-        </div>
+        <div id="word" class="word"></div>
     </div>
 
     <!--container for final message-->
     <div class="popup-container" id="popup-container">
         <div class="popup">
-            <h2 id="final-message"> You have won!</h2>
+            <h2 id="final-message"></h2>
             <button id="play-button">Play again</button>
         </div>
     </div>
