Fri, Apr 19, 2024, 2:59 PM -07:00

--- a/breakout.html
+++ b/breakout.html
@@ -9,7 +9,7 @@
 <body>
 <h1>Breakout</h1>
 <button id="rules-btn" class="btn rules-btn">Show Rules</button>
-<div id="rules" class="rules show">
+<div id="rules" class="rules">
     <h2>How to play:</h2>
     <p>Use right and left arrow keys to move the paddle!  Doing this will bounce the ball and break the blocks! (≧◡≦)</p>
     <p>If you miss the ball, the score and blocks reset... o(〒﹏〒)o</p>
